--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,6 +1,10 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning Github Actions
-on: [push]
+on:
+  push:
+    branches:
+      - 'releases/**'
+
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
@@ -9,5 +13,6 @@ jobs:
         - uses: actions/setup-node@v4
           with:
             node-version: '20'
+        - run: echo ${{ github.ref }}
         - run: npm install -g bats
         - run: bats -v
